# Debugger

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/libsdb/: bit.hpp  breakpoint_site.hpp  disassembler.hpp  error.hpp  libsdb.hpp  parse.hpp  pipe.hpp  process.hpp  register_info.hpp  registers.hpp  stoppoint_collection.hpp  types.hpp  watchpoint.hpp
include/libsdb/detail/: registers.inc
src/: CMakeLists.txt  breakpoint_site.cpp  disassembler.cpp  libsdb.cpp  lidsdb.cpp  pipe.cpp  process.cpp  registers.cpp  watchpoint.cpp
test/: CMakeLists.txt  tests.cpp
test/targets/: CMakeLists.txt  anti_debugger.cpp  hello_sdb.cpp  memory.cpp  reg_read.s  reg_write.s
tools/: CMakeLists.txt  sdb.cpp
